--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
                  </li>
             </ul>
         </nav>
-
     </header>
     <main>
-
+<div></div>//
         <section class="main-logo">
             <img src="" alt="">
         </section>
