--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </nav>
     </header>
     <main>
-<div></div>//
+
         <section class="main-logo">
-            <img src="" alt="">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Google_2015_logo.svg/1024px-Google_2015_logo.svg.png" alt="">
         </section>
 
         <section class="main-input">
@@ -53,8 +53,6 @@
             </div>
 
         </section>
-
-    </main>
-    
+    </main> 
 </body>
 </html>
