Se trabaja con botones asi  como iconos dentro de la barra search

--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
             </div>
 
         </section>
-    </main> 
+    </main>
+    
+    <footer>
+
+        <ul>
+            <li>sobre google</li>
+            <li>Publicidad</li>
+            <li>Negocios</li>
+            <li>Como funciona la busqueda</li>
+        </ul>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </footer>
 </body>
 </html>
