Pagina terminada solo diseño

--- a/index.html
+++ b/index.html
@@ -54,19 +54,32 @@
 
         </section>
     </main>
-    
+  
     <footer>
-
-        <ul>
-            <li>sobre google</li>
-            <li>Publicidad</li>
-            <li>Negocios</li>
-            <li>Como funciona la busqueda</li>
+        <ul class= "footer-left">
+            <li>
+                <a href="">Sobre google</a>
+            </li>  
+            <li>
+                <a href="">Publicida</a>
+            </li>
+            <li>
+                <a href="">Negocios</a>
+            </li>
+            <li>
+                <a href="">Como funciona la busqueda</a>
+            </li>
         </ul>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+        <ul class= "footer-righ">
+            <li>
+                <a href="">Privacidad</a>
+            </li>
+            <li>
+                <a href="">Condiciones</a>
+            </li>
+            <li>
+                <a href="">Preferencias</a>
+            </li>
         </ul>
     </footer>
 </body>
